--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "material-ui": "^0.3.1",
     "react": "^0.12.1",
     "react-router": "^0.11.6",
-    "react-tap-event-plugin": "^0.1.3"
+    "react-tap-event-plugin": "^0.1.3",
+    "request": "^2.55.0"
   },
   "jest": {
     "unmockedModulePathPatterns": [
