--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
+    "firebase": "^2.2.4",
     "fluxxor": "^1.5.1",
     "material-ui": "^0.3.1",
     "react": "^0.12.1",
     "react-router": "^0.11.6",
     "react-tap-event-plugin": "^0.1.3",
+    "reactfire": "^0.4.0",
     "request": "^2.55.0"
   },
   "jest": {
