--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "firebase": "^2.2.4",
     "fluxxor": "^1.5.1",
-    "material-ui": "^0.3.1",
+    "material-ui": "*",
     "react": "^0.12.1",
     "react-router": "^0.11.6",
     "react-tap-event-plugin": "^0.1.3",
